alb.tf
data "aws_acm_certificate" "this" {
    domain = "api.qw1k.cloud"
    statuses = ["ISSUED"]
}

data "aws_route53_zone" "this" {
    name = "qw1k.cloud"
}

# -- alb
resource "aws_lb" "this" {
    name = "qwik-dev-alb"
    internal = false
    load_balancer_type = "application"
    security_groups = [aws_security_group.alb.id]
    subnets = module.network.public_subnet_ids

    tags = {
      Name = "qwik-dev-alb"
    }
}

# -- alb target group
resource "aws_lb_target_group" "this" {
    name     = "qwik-api-server-tg"
    port     = 8000
    protocol = "HTTP"
    vpc_id   = module.network.vpc_id

    health_check {
        path = "/"
        healthy_threshold   = 2
        unhealthy_threshold = 2
        timeout             = 5
        interval            = 30
        matcher             = "200"
    }
    tags = {
      Name = "qwik-api-server-tg"
    }
}

resource "aws_lb_target_group_attachment" "this" {
    target_group_arn = aws_lb_target_group.this.arn
    target_id        = aws_instance.api.id
    port             = 8000
}

# -- alb listener
resource "aws_lb_listener" "http" {
    load_balancer_arn = aws_lb.this.arn
    port              = "80"
    protocol          = "HTTP"

    default_action {
        type             = "redirect"

        redirect {
            port        = "443"
            protocol    = "HTTPS"
            status_code = "HTTP_301"
        }
    }
}

resource "aws_lb_listener" "https" {
  load_balancer_arn = aws_lb.this.arn
  port              = 443
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-TLS13-1-2-2021-06"
  certificate_arn   = data.aws_acm_certificate.this.arn

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.this.arn
  }
}

resource "aws_route53_record" "api" {
  zone_id = data.aws_route53_zone.this.zone_id
  name    = "api.qw1k.cloud"
  type    = "A"

  alias {
    name                   = aws_lb.this.dns_name
    zone_id                = aws_lb.this.zone_id
    evaluate_target_health = true
  }
}
